[gd_scene load_steps=8 format=3 uid="uid://biite8d05a6pg"]

[ext_resource type="Script" path="res://Sun.gd" id="1_nc76u"]
[ext_resource type="PackedScene" uid="uid://crstnijaerfq4" path="res://post_apocaliptico.tscn" id="2_no2gp"]
[ext_resource type="PackedScene" uid="uid://1k4qhjtjj568" path="res://PlanetLava.tscn" id="3_m4aru"]

[sub_resource type="SphereShape3D" id="SphereShape3D_d1nx4"]
radius = 2.5

[sub_resource type="SphereMesh" id="SphereMesh_7twrc"]
radius = 2.5
height = 5.0

[sub_resource type="Curve3D" id="Curve3D_cij7w"]
_data = {
"points": PackedVector3Array(-20.9, 0, -0.4, 20.9, 0, 0.4, 0, 0, -33.1896, 1.2, 0, -16.7, -1.2, 0, 16.7, 38.1531, 0, 0.0597986, 17.6, 0, 0.1, -17.6, 0, -0.1, -0.119598, 0, 29.6015, 0.4, 0, 16.9, -0.4, 0, -16.9, -34, 0, 0, -21.8, 0, 1, 21.8, 0, -1, 0, 0, -33.1896),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0)
}
point_count = 5

[sub_resource type="SphereShape3D" id="SphereShape3D_j5i1k"]
radius = 5.1527

[node name="Sun" type="StaticBody3D"]
script = ExtResource("1_nc76u")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_d1nx4")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_7twrc")

[node name="Orbita1" type="Path3D" parent="."]
curve = SubResource("Curve3D_cij7w")

[node name="PathFollow3D" type="PathFollow3D" parent="Orbita1"]
transform = Transform3D(0.0191351, 0, 0.99981, 0, 1, 0, -0.99981, 0, 0.0191351, 0, 0, -33.1896)
cubic_interp = false
tilt_enabled = false

[node name="RemoteTransform3D" type="RemoteTransform3D" parent="Orbita1/PathFollow3D"]
transform = Transform3D(0.0191353, 0, -0.999823, 0, 1, 0, 0.999823, 0, 0.0191353, -1.18939, 0, 0.0227634)

[node name="Orbita2" type="Path3D" parent="."]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0, 0)
curve = SubResource("Curve3D_cij7w")

[node name="PathFollow3D" type="PathFollow3D" parent="Orbita2"]
transform = Transform3D(0.0063784, 0, 0.333272, 0, 0.333333, 0, -0.333272, 0, 0.0063784, 0, 0, -33.1896)

[node name="RemoteTransform3D" type="RemoteTransform3D" parent="Orbita2/PathFollow3D"]
remote_path = NodePath("../../../PlanetaLava")

[node name="Orbita3" type="Path3D" parent="."]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0, 0)
curve = SubResource("Curve3D_cij7w")

[node name="PathFollow3D" type="PathFollow3D" parent="Orbita3"]
transform = Transform3D(0.00382704, 0, 0.199963, 0, 0.2, 0, -0.199963, 0, 0.00382704, 0, 0, -33.1896)

[node name="RemoteTransform3D" type="RemoteTransform3D" parent="Orbita3/PathFollow3D"]

[node name="PlanetaPost" parent="." instance=ExtResource("2_no2gp")]
transform = Transform3D(0.999999, 0, -3.1665e-08, 0, 1, 0, 3.1665e-08, 0, 0.999999, -1.86265e-09, 0, -32)

[node name="Area3D" type="Area3D" parent="PlanetaPost"]
transform = Transform3D(0.25, 0, -7.91624e-09, 0, 0.25, 0, 7.91624e-09, 0, 0.25, -4.65661e-10, 0, -7.5)

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlanetaPost/Area3D"]
transform = Transform3D(1, 0, 1.06678e-14, -1.0842e-19, 1, 0, -1.06485e-14, 0, 1, 0, 0.000525475, 30.0358)
shape = SubResource("SphereShape3D_j5i1k")

[node name="Camera3D" type="Camera3D" parent="PlanetaPost"]
transform = Transform3D(0.34202, 0.397131, -0.851651, 0, 0.906308, 0.422619, 0.939693, -0.144544, 0.309976, -5.1795, 3.2624, 2.24927)
current = true

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="PlanetaPost"]
transform = Transform3D(0.168334, 0.361169, -0.917182, -0.065198, 0.932501, 0.355235, 0.983572, 1.05977e-07, 0.180519, -8.42173, 4.71928, 0)

[node name="PlanetaLava" parent="." instance=ExtResource("3_m4aru")]
transform = Transform3D(0.0191352, 0, 0.999816, 0, 0.999999, 0, -0.999816, 0, 0.0191352, 0, 0, -99.5688)
